# califorcia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
califorcia/: __init__.py  compute.py  frequency_summation.py  interaction.py  longitudinal_interaction.py  models.py  plane.py
califorcia/materials/: Si.py  SiC.py  aAl2O3.py  aSiO2.py  aluminium.py  ethanol.py  fused_silica.py  gold.py  gold_plasma.py  pdoped_Si.py  pec.py  polystyrene.py  salt_water.py  silica.py  sodalime.py  teflon.py  vacuum.py  water.py  water_11.py  water_hw.py
docs/: api.md  development.md  getting-started.md  materials.md
examples/: example1.py  example2.py  example3.py  example4.py
tests/: test_consistency.py  test_electrolytes.py  test_plane.py  test_results.py  test_validation.py
